--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>yaorongke</title>
+    <title>mason1202</title>
 </head>
 <body>
     <h1>阿东的个人主页</h1>
